--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,7 +6,6 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
-
 }
 
 .header {
@@ -14,9 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  align-items: center;
-  padding: 10px;
-  
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -24,8 +22,7 @@ body {
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
-  height: 48px;
-
+  height:  48px;
 }
 
 .logo {
@@ -33,7 +30,6 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  justify-content: flex start;
 }
 
 button {
@@ -42,10 +38,6 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  display: flex;
-  justify-content: flex-end;
-
-
 }
 
 a {
@@ -56,6 +48,14 @@ a {
 
 ul {
   list-style-type: none;
-  gap: 8px;
   display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
